--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "prettier": "prettier --write .",
-    "prepare": "husky install",
-    "commit": "cz"
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "element-plus": "^1.1.0-beta.70",
+    "element-plus": "^1.1.0-beta.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -31,11 +29,8 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-plugin-import": "^1.13.3",
-    "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
-    "husky": "^7.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^2.3.2",
