--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "element-plus": "^1.1.0-beta.7",
     "vue": "^3.0.0",
+    "normalize.css": "^8.0.1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
